allow entities to be dragged to drop-targets

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -474,6 +474,7 @@ strong {
         border: none;
         background-color: rgba($text-active, .4);
         transition: background-color 100ms;
+        pointer-events: all;
 
         &.hole {
             outline: 2px solid $text-active;
@@ -813,7 +814,7 @@ strong {
                         margin: 3px;
                         padding: 0 28px 0 8px;
                         overflow: hidden;
-                        text-overflow: ellipsis;
+                        text-overflow: clip;
                         font-family: inconsolatamedium;
                         font-size: 12px;
                         background-color: $bcg-dark;
@@ -829,6 +830,8 @@ strong {
                         &:after {
                             font-size: 24px;
                             line-height: 14px;
+                            height: 22px;
+                            background-color: $bcg-dark;
                         }
                     }
                 }
@@ -1655,18 +1658,18 @@ strong {
         }
         > .label {
             @extend .font-regular;
-
             position: absolute;
             right: 0;
             left: 0;
-            bottom: 8px;
+            bottom: 4px;
             width: auto;
             max-width: 100px;
+            max-height: 40px;
+            word-break: break-all;
             line-height: 14px;
             margin: 0px;
             padding: 2px;
             font-size: 12px;
-            text-overflow: ellipsis;
             text-align: center;
             overflow: hidden;
             color: $text-primary;
@@ -2696,6 +2699,9 @@ strong {
 }
 
 .ui-label.cursor-tooltip {
+    font-family: "Lucida Console", Monaco, monospace;
+    font-weight: normal;
+    font-size: 10px;
     display: block;
     position: absolute;
     top: -26px;
@@ -2704,7 +2710,6 @@ strong {
     margin: 0;
     padding: 0 6px;
     line-height: 18px;
-    font-size: 12px;
     opacity: 1;
     visibility: visible;
     transition: opacity 100ms, visibility 100ms;
