--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1942,30 +1942,39 @@ strong {
     background-color: transparent;
 
     > .content {
-        > .project-name {
+        > .home {
+            @extend .font-icon;
+        }
+
+        > .home, > .project-name, > .scene-name, > .scene-list {
             height: 28px;
             min-height: 28px;
             line-height: 28px;
             padding: 0 8px;
-            margin: 0 0 4px 0;
+            margin: 0 2px 0 0;
             color: rgba(#fff, 0.75);
             background-color: rgba(41, 53, 56, 0.5);
-            cursor: default;
-        }
-        > .scene-name {
-            display: block;
-            color: rgba(#fff, 0.75);
-            background-color: rgba(41, 53, 56, 0.5);
-            padding: 0 8px;
-            margin: 0;
-            height: 28px;
-            line-height: 28px;
             cursor: pointer;
 
             &:hover,
             &.active {
                 background-color: rgba(41, 53, 56, 0.75);
                 color: #fff;
+            }
+        }
+
+        > .home, > .project-name, > .scene-name {
+            margin-bottom: 4px;
+        }
+
+        > .scene-list {
+            display: block;
+            width: 100px;
+
+            &:before {
+                content: '\E185';
+                @extend .font-icon;
+                margin-right: 7px;
             }
         }
     }
