Added progress bar in scene picker, Instantly close scene picker on new scene

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3041,6 +3041,10 @@ strong {
 
                         }
                     }
+
+                    .ui-progress {
+                        width: 100%;
+                    }
                 }
 
                 > .picker-scene-footer {
