Scene menu icon fixes

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1985,6 +1985,8 @@ strong {
                 @extend .font-icon;
                 margin-right: 7px;
                 font-size: 14px;
+                float: left;
+                line-height: 31px;
             }
         }
     }
