Replaced delete confirmation with picker:confirmation

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2441,6 +2441,10 @@ strong {
     }
 }
 
+.picker-confirm {
+    z-index: 10000;
+}
+
 .picker-confirm.center {
     > .content {
         width: 288px;
