--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1946,16 +1946,12 @@ strong {
     background-color: transparent;
 
     > .content {
-        > .home {
-            @extend .font-icon;
-            font-size: 14px;
-        }
-
-        > .home, > .project-name, > .scene-name, > .scene-list {
+        > .project-name, > .scene-name, > .scene-list {
             height: 32px;
             min-height: 32px;
             line-height: 32px;
             padding: 0 10px;
+            font-size: 12px;
             margin: 0 2px 0 0;
             color: rgba(#fff, 0.75);
             background-color: rgba(41, 53, 56, 0.5);
@@ -1966,27 +1962,29 @@ strong {
                 background-color: rgba(41, 53, 56, 0.75);
                 color: #fff;
             }
+
+            &:before {
+                @extend .font-icon;
+                font-size: 14px;
+                margin-right: 7px;
+                float: left;
+                line-height: 31px;
+            }
+
         }
 
-        > .home, > .project-name, > .scene-name {
-            margin-bottom: 4px;
+        > .project-name:before {
+            content: '\E525';
         }
 
-        > .project-name, > .scene-name, > .scene-list {
-            font-size: 12px;
+        > .scene-name:before {
+            content: '\E328';
         }
 
         > .scene-list {
-            display: block;
-            width: 90px;
-
             &:before {
                 content: '\E185';
-                @extend .font-icon;
-                margin-right: 7px;
-                font-size: 14px;
-                float: left;
-                line-height: 31px;
+                margin-right: 0px;
             }
         }
     }
