--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1762,9 +1762,10 @@ strong {
     position: absolute;
     top: 2px;
     right: 74px;
-    margin: 2px;
+    margin: 2px 0;
 
-    line-height: 30px;
+    height: 31px;
+    line-height: 33px;
     padding: 0px 10px;
 
     background-color: rgba($bcg-darker, .5);
@@ -1772,15 +1773,15 @@ strong {
 
     > .value {
         min-height: 30px;
-        line-height: 30px;
+        line-height: 32px;
         color: rgba($text-primary, .75);
 
         @extend .font-regular;
 
         &:after {
-            width: 30px;
-            height: 30px;
-            line-height: 30px;
+            width: 32px;
+            height: 32px;
+            line-height: 32px;
             content: '\E126';
             color: rgba($text-primary, .5);
 
@@ -1826,10 +1827,10 @@ strong {
     > .content {
         > .ui-button.expand {
             float: right;
-            width: 32px;
-            height: 32px;
+            width: 33px;
+            height: 33px;
             line-height: 30px;
-            margin: 0 4px 0 0;
+            margin: 0 2px 0 0;
             padding: 0;
             border: none;
             @extend .font-icon;
@@ -1860,9 +1861,9 @@ strong {
             }
             > .content {
                 > .ui-button {
-                    width: 32px;
-                    height: 32px;
-                    line-height: 30px;
+                    width: 33px;
+                    height: 33px;
+                    line-height: 32px;
                     margin: 0;
                     padding: 0;
                     border: none;
@@ -1880,7 +1881,7 @@ strong {
 
                 > ul.dropdown-menu {
                     position: absolute;
-                    top: 32px;
+                    top: 33px;
                     right: 0;
                     padding: 0;
                     margin: 0;
@@ -1947,9 +1948,9 @@ strong {
 
     > .content {
         > .project-name, > .scene-name, > .scene-list {
-            height: 32px;
-            min-height: 32px;
-            line-height: 32px;
+            height: 33px;
+            min-height: 33px;
+            line-height: 34px;
             padding: 0 10px;
             font-size: 12px;
             margin: 0 2px 0 0;
@@ -1968,7 +1969,7 @@ strong {
                 font-size: 14px;
                 margin-right: 7px;
                 float: left;
-                line-height: 31px;
+                line-height: 32px;
             }
 
         }
