--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2012,6 +2012,7 @@ strong {
             &:hover {
                 > .content > .ui-button {
                     color: $text-primary;
+                    background-color: $text-active;
                 }
             }
             > .content {
@@ -2026,12 +2027,7 @@ strong {
                     font-size: 24px;
                     text-align: center;
                     color: rgba($text-primary, .75);
-                    background-color: $text-active;
-
-                    &:hover {
-                        color: $text-primary;
-                        background-color: $text-active;
-                    }
+                    background-color: rgba($bcg-darker, .5);
                 }
 
                 > ul.dropdown-menu {
