--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1361,11 +1361,31 @@ strong {
 
             > .ui-button.add-component {
                 display: block;
-                text-align: center;
+                background-color: $bcg-dark;
+                text-transform: uppercase;
+                font-size: 12px;
+                border: none;
+                margin-top: 5px;
+                position: relative;
+                padding-left: 30px;
+                height: 26px;
+                line-height: 28px;
+
+                &:hover {
+                    background-color: $bcg-darkest;
+
+                    &:before {
+                        color: $text-active;
+                    }
+                }
+
+                @extend .font-bold;
 
                 &:before {
+                    position: absolute;
+                    top: -1px;
+                    left: 8px;
                     content: '\E464';
-                    padding-right: 8px;
                     @extend .font-icon;
                     font-size: 16px;
                     text-align: center;
@@ -1396,8 +1416,39 @@ strong {
                 }
             }
             > .ui-button.override-material {
-                text-align: center;
                 flex-grow: 1;
+                background-color: $bcg-dark;
+
+                &:hover {
+                    background-color: $bcg-darkest;
+
+                    &:before {
+                        color: $text-active;
+                    }
+                }
+
+                text-transform: uppercase;
+                font-size: 10px;
+                border: none;
+                position: relative;
+                height: 28px;
+                line-height: 30px;
+                padding-left: 28px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+
+                @extend .font-bold;
+
+                &:before {
+                    position: absolute;
+                    top: -1px;
+                    left: 8px;
+                    content: '\E117';
+                    @extend .font-icon;
+                    font-size: 16px;
+                    text-align: center;
+                }
             }
         }
 
@@ -2134,9 +2185,14 @@ strong {
         }
 
         > .scene-list {
+            width: 33px;
+            padding: 0;
             &:before {
                 content: '\E185';
                 margin-right: 0px;
+                width: 33px;
+                height: 33px;
+                text-align: center;
             }
         }
     }
