--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1568,6 +1568,17 @@ strong {
             }
         }
     }
+    .ui-label.asset-loading-error {
+        display: block;
+        text-align: center;
+        font-weight: 100;
+        font-size: 12px;
+        color: #f66;
+
+        &.hidden {
+            display: none;
+        }
+    }
 }
 
 .ui-panel.hierarchy {
